url changed to heroku

--- a/src/app/components/table/table.css
+++ b/src/app/components/table/table.css
@@ -87,6 +87,14 @@ td {
     text-align: left;
 }
 
+.td__date {
+    width: 30%;
+}
+
+.td__actions {
+    width: 10%;
+}
+
 .desc-active {
     display: block;
 }
